# quotea

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
quotea/: app.py
