[tool.poetry]
name = "quotea"
version = "0.1.0"
description = ""
authors = ["daniarlert <arlertdaniel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
textual = "^0.29.0"


[tool.poetry.group.dev.dependencies]
textual-dev = "^1.0.1"
pre-commit = "^3.3.3"
black = "^23.3.0"
commitizen = "^3.5.2"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
